# meg-lang

./: .clang-format  .gitignore  CMakeLists.txt  a.out  designv3.md  example.sushi  main.sushi  readme.md  rust_notes.md  vector.sushi
langspec/: async.md  butts.ts  enum_unions.md  meg.meg  rtti.md
langspec/clang/: pass_struct_by_value.md
langspec/langs/: javascript_gen.js  python_gen.py
langspec/samples/: example.sushi  example_20230214.sushi  example_20230216_1655.sushi  example_20230216_2000.sushi  example_20230219.md  example_20230220.md  example_20230220.sushi  example_20230221_1742.sushi  example_20230221_2100.md  example_20230222_2100.sushi
scratch/: a.out  address_byval.cpp
src/: main.cpp  main_2.cpp  sushi_format.cpp  sushi_main.cpp
src/ast/: IAstNode.h  IAstVisitor.h  IExpressionNode.h  IStatementNode.h  Identifier.h  Module.h  Span.h  Type.cpp  Type.h  ast.h  ast_node_type.h
src/ast/expressions/: BinOp.cpp  BinOp.h  Call.h  Expression.h  Identifier.h  MemberReference.h  Number.cpp  Number.h  StringLiteral.h  TypeDeclarator.h
src/ast/statements/: Assign.h  Block.cpp  Block.h  For.h  Function.cpp  Function.h  If.h  Iter.h  Let.h  Prototype.cpp  Prototype.h  Return.cpp  Return.h  Statement.h  Struct.h  While.h
src/ast2/: Ast.cpp  Ast.h  AstCasts.cpp  AstCasts.h  AstGen.cpp  AstGen.h  AstNode.cpp  AstNode.h  AstTags.h  ParseResult.cpp  ParseResult.h  ParseTrail.cpp  ParseTrail.h  Span.h  bin_op.cpp  bin_op.h
src/ast2/ast/: parse_common.cpp  parse_common.h  parse_enum.cpp  parse_enum.h  parse_if_arrow.cpp  parse_if_arrow.h  parse_is.cpp  parse_is.h  parse_namespace.cpp  parse_namespace.h  parse_struct.cpp  parse_struct.h
src/ast3/: Ast.cpp  Ast.h  AstNode.cpp  AstNode.h  NameParts.cpp  NameParts.h  ParseResult.cpp  ParseResult.h  ParseTrail.cpp  ParseTrail.h  Parser.cpp  Parser.h  Span.h  bin_op.cpp  bin_op.h  parse.cpp  parse.h
src/codegen/: Codegen.cpp  Codegen.cpp.old  Codegen.h  Codegen.old
src/codegen2/: CGExpr.cpp  CGExpr.h  CGResult.cpp  CGResult.h  CGTag.cpp  CGTag.h  CGed.cpp  CGed.h  Codegen.cpp  Codegen.h  LLVMType.cpp  LLVMType.h  LValue.cpp  LValue.h  Scope.cpp  Scope.h  ource_filename = "this_module"
src/codegen2/Codegen/: CGFunctionContext.cpp  CGFunctionContext.h  CGNotImpl.cpp  CGNotImpl.h  LLVMAddress.cpp  LLVMAddress.h  LLVMArgABIInfo.h  LLVMFn.h  LLVMFnInfo.cpp  LLVMFnInfo.h  LLVMFnInfoBuilder.cpp  LLVMFnInfoBuilder.h  LLVMFnSigInfo.cpp  LLVMFnSigInfo.h  LLVMFnSigInfoBuilder.cpp  LLVMFnSigInfoBuilder.h  RValue.cpp  RValue.h  cg_access.cpp  cg_access.h  cg_assign.cpp  cg_assign.h  cg_copy.cpp  cg_copy.h  cg_discriminations.cpp  cg_discriminations.h  cg_division.cpp  cg_division.h  cg_enum_helpers.cpp  cg_enum_helpers.h  cg_fixdown.cpp  cg_fixdown.h  codegen_addressof.cpp  codegen_addressof.h  codegen_array_access.cpp  codegen_array_access.h  codegen_assign.cpp  codegen_assign.h  codegen_binop.cpp  codegen_binop.h  (+31 more)
src/codegen3/: Address.cpp  Address.h  CGExpr.h  Codegen.cpp  Codegen.h  Codegen_generator.cpp  Expr.cpp  Expr.h  Function.cpp  Function.h  RValue.cpp  RValue.h  emit.cpp  emit.h
src/codegen3/Codegen/: LLVMAddress.h  LLVMFnInfo.cpp  LLVMFnInfo.h  LLVMFnInfoBuilder.h  LLVMFnSigInfo.cpp  LLVMFnSigInfo.h  LLVMFnSigInfoBuilder.cpp  LLVMFnSigInfoBuilder.h  LValue.h  codegen_alloca.cpp  codegen_alloca.h  codegen_call.cpp  codegen_call.h  codegen_function.cpp  codegen_function.h  codegen_inst.cpp  codegen_inst.h  codegen_return.cpp  codegen_return.h  codegen_store.cpp  codegen_store.h  codegen_string_literal.cpp  codegen_string_literal.h  codegen_var_ref.cpp  codegen_var_ref.h  lookup.cpp  lookup.h  operand.cpp
src/common/: OwnPtr.h  String.h  unreachable.h
src/format/: Format.cpp  Format.h  FormatLine.cpp  FormatLine.h  FormatParser.cpp  FormatParser.h  NodeFormatter.cpp  NodeFormatter.h  NodeSpan.cpp  NodeSpan.h  pretty_print_ast.cpp  pretty_print_ast.h  reverse.h  s  utils.cpp  utils.h
src/hir/: Type.cpp  Type.h
src/ir/: EnumNominal.h  IR.cpp  IR.h  IRBuilder.cpp  IRBuilder.h  Lookup.cpp  Lookup.h  MemberTypeInstance.h  Name.cpp  Name.h  QualifiedName.h  Type.cpp  Type.h  TypeInstance.cpp  TypeInstance.h  Types.cpp  Types.h
src/kaleidoscope_sample/: KaleidoscopeJIT.h
src/lex3/: Cursor.cpp  Cursor.h  Lex.cpp  Lex.h  Token.cpp  Token.h  character_sets.h  keywords.cpp  keywords.h  print_token.cpp  print_token.h
src/lexer/: Lexer.cpp  Lexer.h  TokenCursor.cpp  TokenCursor.h  character_sets.h  keywords.cpp  keywords.h  lexer.cpp  lexer.h  token.h
src/parser/: CodegenContext.h  ParseResult.cpp  ParseResult.h  parser.h
src/parser/ast/: IExpressionNode.h  IStatementNode.h
src/parser/nodes/: IExpressionNode.h  IStatementNode.h
src/parser/parsers/: ParseScope.cpp  ParseScope.h  ParseTrail.cpp  ParseTrail.h  Parser.cpp  Parser.cpp.old  Parser.h  Parser2.cpp  Parser2.h  bin_op.cpp  bin_op.h
src/sema/: Sema.cpp  Sema.h  SemaResult.h  Type.cpp  Type.h  Type_old.h
src/sema2/: IR.h  Lookup.cpp  Lookup.h  MemberTypeInstance.cpp  MemberTypeInstance.h  Name.cpp  Name.h  QualifiedName.h  Scope.cpp  Scope.h  Sema2.cpp  Sema2.h  SemaGen.cpp  SemaGen.h  SemaResult.cpp  SemaResult.h  SemaTag.cpp  SemaTag.h  Type.cpp  Type.h  TypeInstance.cpp  TypeInstance.h  TypedMember.cpp  TypedMember.h  Types.cpp  Types.h  mangling.cpp  mangling.h  sema_expected.h
src/sema2/lowering/: lower_for.cpp  lower_for.h
src/sema2/sema/: idname.cpp  idname.h  sema_id.cpp  sema_id.h  sema_namespace.cpp  sema_namespace.h
src/sema2/type/: EnumNominal.h  FunctionTypeInfo.cpp  FunctionTypeInfo.h  Type.h  (+3 more)
src/sema3/: ActionResult.cpp  ActionResult.h  Hir.cpp  Hir.h  HirNode.cpp  HirNode.h  Name.cpp  Name.h  QualifiedName.cpp  QualifiedName.h  QualifiedTy.cpp  QualifiedTy.h  Sema.cpp  Sema.h  SemaGen.cpp  SemaGen.h  SemaLookup.cpp  SemaLookup.h  SemaResult.cpp  SemaResult.h  Sym.cpp  Sym.h  SymBuiltins.cpp  SymBuiltins.h  SymLookup.cpp  SymLookup.h  SymScope.cpp  SymScope.h  SymTab.cpp  SymTab.h  Ty.cpp  Ty.h  Types.cpp  Types.h  sema_expected.h
test/: compile-and-run.js  package-lock.json  package.json
test/clang_harness/: clang_harness.cpp
(+53 files in other folders)
